@@ -37,7 +37,11 @@ at32uc3a0512, at32uc3a1512, at32uc3a0512es, at32uc3a1512es,
 at32uc3a364, at32uc3a364s, at32uc3a3128, at32uc3a3128s,
 at32uc3a3256, at32uc3a3256s, at32uc3b064, at32uc3b164,
 at32uc3b0128, at32uc3b1128, at32uc3b0256, at32uc3b1256,
-at32uc3b0256es, at32uc3b1256es, at32uc3b1512, and at32uc3b0512.
+at32uc3b0256es, at32uc3b1256es, at32uc3b1512, at32uc3b0512,
+at32uc3c064, at32uc3c0128, at32uc3c0256, at32uc3c0512, 
+at32uc3c164, at32uc3c1128, at32uc3c1256, at32uc3c1512, 
+at32uc3c264, at32uc3c2128, at32uc3c2256 and at32uc3c2512.
+
 .SH USAGE
 There are no mechanisms for selecting which single device
 should be programmed, or to implement gang programming.
