@@ -7,7 +7,7 @@
     <!-- Atmel -->
     <match key="info.subsystem" contains="usb_device">
       <match key="usb_device.vendor_id" int="0x03eb">
-        <match key="usb_device.product_id" int_outof="0x2fff;0x2ffd;0x2ffb;0x2ff9;0x2ffa;0x2ff8;0x2ff7;0x2ff6;0x2ff4;0x2ff3;0x2ff2;0x2ff1">
+        <match key="usb_device.product_id" int_outof="0x2fff;0x2ffd;0x2ffb;0x2ffa;0x2ff9;0x2ff8;0x2ff7;0x2ff6;0x2ff4;0x2ff3;0x2ff2;0x2ff1;0x2ff0;0x2feb">
           <append key="info.capabilities" type="strlist">dfu-device</append>
           <append key="info.capabilities" type="strlist">access_control</append>
           <merge key="access_control.file" type="copy_property">linux.device_file</merge>
