@@ -79,6 +79,18 @@ enum targets_enum { tar_at89c51snd1c,
                     tar_at32uc3a3128s,
                     tar_at32uc3a3256,
                     tar_at32uc3a3256s,
+                    tar_at32uc3c064,
+                    tar_at32uc3c0128,
+                    tar_at32uc3c0256,
+                    tar_at32uc3c0512,
+                    tar_at32uc3c164,
+                    tar_at32uc3c1128,
+                    tar_at32uc3c1256,
+                    tar_at32uc3c1512,
+                    tar_at32uc3c264,
+                    tar_at32uc3c2128,
+                    tar_at32uc3c2256,
+                    tar_at32uc3c2512,
                     tar_none };
 
 enum commands_enum { com_none, com_erase, com_flash, com_user, com_eflash,
